# ICY_YOLO_Converter

./: README.md  main.py  pyproject.toml
INPUT/: 0001_beespoke_20210630_0001.xml
OUTPUT/train/labels/: 0001_beespoke_20210630_0002.txt
OUTPUT/valid/labels/: 0001_beespoke_20210630_0001.txt
