[tool.poetry]
name = "xml_to_yolo_converter"
version = "0.1.0"
description = ""
authors = ["RistoVD <risto.vandijk@hvhl.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
